fix: changed visibility rules

--- a/src/style/LevelNode.scss
+++ b/src/style/LevelNode.scss
@@ -6,6 +6,11 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-bottom: 40px;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
 
   &__siblings {
     width: 80%;
